--- a/pages/common/template/recommendStyle3/recommend-style3.wxss
+++ b/pages/common/template/recommendStyle3/recommend-style3.wxss
@@ -3,15 +3,17 @@
 
 .template3 {
   position: relative;
-  height: 400rpx;
+  height: 550rpx;
   margin: 10rpx;
   background-color: white;
+  display: flex;
+  flex-direction: column;
 }
 
 .template3 image-pro {
   position: relative;
   width: 100%;
-  height: 300rpx;
+  height: 400rpx;
 }
 
 .template3 .time{
@@ -20,5 +22,5 @@
   top: 360rpx;
 }
 .template3 .template3-bottom {
-  height: 100rpx;
+  height: 150rpx;
 }
