--- a/pages/common/template/recommendStyle3/recommend-style3.wxml
+++ b/pages/common/template/recommendStyle3/recommend-style3.wxml
@@ -3,12 +3,12 @@
 <template name="recommend-style3">
   <view class="template3">
    <image-pro src="{{thumbnails['2']['file']}}"></image-pro>
-  <view class='time'>
-    <template is="media-time" time="00:34">
-  </template>
-  </view>
-  <view class='template3-bottom'>
+    <view class='time'>
+      <template is="media-time" time="00:34" wx:if="{{time}}">
+      </template>
+    </view>
+   <view class='template3-bottom'>
     <template is="recommend-text" data="{{title:title,publishTime:'09-08',feature:feature}}"></template>
+    </view>
   </view>
-</view>
 </template>
