--- a/pages/gwy/gwy.wxss
+++ b/pages/gwy/gwy.wxss
@@ -1,6 +1,97 @@
 /* pages/gwy/gwy.wxss */
+@import "../common/template/recommendStyle2/recommend-style2.wxss";
 
-image {
-  width: 100rpx;
-  height: 100rpx;
+@import "../common/template/recommendStyle3/recommend-style3.wxss";
+
+@import "../common/template/recommendTextInforStyle/recommend-text.wxss";
+
+page {
+  height: 100%;
 }
+.container {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #eee;
+}
+.section {
+  margin: 0rpx 10rpx;
+}
+.header {
+  height: 30rpx;
+  margin: 20rpx 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.header .header-left {
+  flex: 1;
+  color: rgb(39, 57, 90);
+  font-size: 15px;
+  align-items: center;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+
+}
+.header .header-left icon{
+  height: 15px;
+  width: 8rpx;
+  background-color: rgb(39, 57, 90);
+  margin: 0px 10rpx;
+}
+
+.header .header-right{
+  width: 40rpx;
+  height: 100%;
+  align-items: right;
+}
+.header .header-right image {
+  width: 20rpx;
+  height: 100rpx;
+} 
+.template1 {
+  height: 150rpx;
+} 
+
+.member-content {
+  margin: 10rpx 0;
+}
+
+
+.text-higlight {
+  color:  rgb(39, 57, 90);
+}
+.member {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color:  #666;
+  font-size: 17px;
+  background-color: #ddd;
+  height: 80rpx;
+}
+.member-more {
+  margin-top: 4rpx;
+}
+.member-header {
+  margin-top: 10rpx;
+}
+.member-footer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color:  white;
+  font-size: 18px;
+  background-color: #333;
+  height: 80rpx;
+}
+.shouwMoreMemo {
+  
+}
+
