--- a/pages/common/banner/banner.wxml
+++ b/pages/common/banner/banner.wxml
@@ -7,7 +7,7 @@
  indicator-active-colo="{{config['indicator-active-color']}}"
  class='swiper' 
  bindchange="didChange">
-  <swiper-item wx:for="{{items}}" wx:key="articleId">
+  <swiper-item wx:for="{{items}}" wx:key="articleId" bindtap="clickItem" data-path="{{item.path}}">
     <image-pro src="{{item['thumbnails']['2']['file']}}"  width="100%" height="100%"></image-pro>
     <view class='info'>
       <text>{{item.title}}</text>
