--- a/pages/common/subGrid/item-grid.wxml
+++ b/pages/common/subGrid/item-grid.wxml
@@ -5,7 +5,7 @@
  indicator-color="{{config['indicator-color']}}"
  indicator-active-colo="{{config['indicator-active-color']}}">
   <swiper-item class = "swiper-item" wx:for="{{[0,1,2]}}" wx:key="*this" wx:for-item="i">
-    <view class='item' wx:for="{{[0,1,2,3,4]}}" wx:key="*this" wx:for-item="j">
+    <view class='item' wx:for="{{[0,1,2,3,4]}}" wx:key="*this" wx:for-item="j" bindtap='clickItem' data-id="{{items[j+ i * 3]['cID']}}" data-title="{{items[j+ i * 3]['cTitle']}}">
       <image src="{{items[j+ i * 3]['cImage']}}" mode='widthFix'></image>
       <text>{{items[j+ i * 3]['cTitle']}}</text>
     </view>
