--- a/pages/common/banner/banner.wxml
+++ b/pages/common/banner/banner.wxml
@@ -4,12 +4,12 @@
  autoplay="{{config['autoplay']}}"
  circular="{{config['circular']}}"
  indicator-color="{{config['indicator-color']}}"
- indicator-active-colo="{{config['indicator-active-color']}}"
+ indicator-active-color="{{config['indicator-active-color']}}"
  class='swiper' 
  bindchange="didChange">
   <swiper-item wx:for="{{items}}" wx:key="articleId" bindtap="clickItem" data-path="{{item.path}}">
     <image-pro src="{{item['thumbnails']['2']['file']}}"  width="100%" height="100%"></image-pro>
-    <view class='info'>
+    <view class='info' wx:if="{{shouldShowInfo}}">
       <text>{{item.title}}</text>
     </view>
   </swiper-item>
