--- a/pages/service/service.wxss
+++ b/pages/service/service.wxss
@@ -1,6 +1,7 @@
 /* pages/Service/service.wxss */
 page {
   background-color: #eee;
+  margin-bottom: 20rpx;
 }
 .service-tag {
   margin: 20rpx 0rpx;
@@ -60,3 +61,100 @@ page {
 .service-news .left text:first-child {
   background-color: rgba(194, 203, 219,0.4)
 }
+
+.service-news .right {
+  flex: 1;
+  height: 100%;
+  position: relative;
+}
+
+.info {
+  margin-top: 20rpx;
+}
+
+.info .info-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 20rpx;
+  align-items: center;
+  height: 80rpx;
+  background-color: white;
+  border-bottom: 1px solid #eee;
+}
+.info .info-header .left {
+  font-size: 18px;
+  color: rgb(78, 94, 122);
+
+}
+
+.info .info-header .right  text{
+  font-size: 12px;
+  color: #999;
+}
+
+.info .info-header .right image{
+  width: 20px;
+  height: 100%;
+}
+.info-content {
+  background-color: white;
+}
+
+.info-content .info-content-item {
+  position: relative;
+  min-width: 50%;
+  max-width: 100%;
+  height: 80rpx;
+  display: inline-block;
+  align-items: center;
+  padding: 10rx 20rpx;
+  font-size: 14px;
+  color: #333;
+  line-height: 80rpx;
+  box-sizing: border-box;
+  background-color: white;
+  /* border: 0.5rpx solid #eee; */
+}
+.info-content .info-content-item image {
+  width: 20px;
+  margin-left: 20rpx;
+  margin-right: 15rpx;
+}
+.info-content .info-content-item text {
+  word-break: keep-all;
+
+}
+.zhuanti-content {
+  height: 150rpx;
+  padding: 0 20rpx;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  background-color: white;
+  font-size: 18px;
+  color: rgb(78, 94, 122);
+}
+
+.zhuanti-item{
+  display: inline-block;
+  height: 130rpx;
+  width: 270rpx;
+  margin-right: 20rpx;
+  background-color: orange;
+}
+
+.zhuanti-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 20rpx;
+  align-items: center;
+  height: 80rpx;
+  background-color: white;
+  font-size: 18px;
+  color: rgb(78, 94, 122);
+}
+
+
